# testing-mission

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  lib.cpp  lib.h
prog1/: CMakeLists.txt  main.cpp
prog2/: CMakeLists.txt  main.cpp
